<resources>
    <string name="app_name">Smart Garden Care</string>
    <string name="lineChart">Line Chart</string>
    <string name="more">More</string>
    <string name="exception">Exception!</string>
    <string name="setting">Setting</string>
    <string name="changeLanguage">Change Language</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="choose">Choose</string>
    <string name="fetching">Fetching</string>
    <string name="errorSensorMoisture">Moisture Sensor Error</string>
    <string name="errorSensorDHT22">Temperature Sensor Error</string>
    <string name="errorSensorBH1750">Light Sensor Error</string>
    <string name="saveSetting">Save Setting</string>
    <string name="success">Success</string>
    <string name="onSaveSetting">Save Setting...</string>
    <string name="water...">Water...</string>
    <string name="shower...">Shower...</string>
    <string name="openSlat...">Open Slat...</string>
    <string name="closeSlat...">Close Slat...</string>
    <string name="notLoadIm">Can not Download Image</string>
    <string name="PermissionWRITE_EXTERNALDenied">because Permission Denied</string>
    <string name="loadIMSuccess">Load Image Success</string>
    <string name="waterFalse">Water False!</string>
    <string name="refreshIM">Refresh Image...</string>
    <string name="moistureSensor1">Moisture Sensor 1</string>
    <string name="moistureSensor2">Moisture Sensor 2</string>
    <string name="tempSensor1">Temp Sensor 1</string>
    <string name="tempSensor2">Temp Sensor 2</string>
    <string name="lightSensor1">Light Sensor 1</string>
    <string name="lightSensor2">Light Sensor 2</string>
    <string name="autoMode">Auto Mote</string>
    <string name="noWateringArea">No Watering Area</string>
    <string name="tempNotDecrease">Temp Not Decrease</string>
    <string name="lightInNotDecrease">light in not Decrease</string>
    <string name="before">before</string>
    <string name="after">after</string>
    <string name="onPresent">Detects device to Connected NETPIE</string>
    <string name="onAbsent">Device Connection Failed</string>
    <string name="SlatIsOpened">Slat is Opened</string>
    <string name="SlatIsClosed">Slat is Closed</string>
    <string name="moistureBefore">moisture before</string>
    <string name="moistureAfter">moisture after</string>
    <string name="tempBefore">temp before</string>
    <string name="tempAfter">temp after</string>
    <string name="lightBefore">light Before</string>
    <string name="lightAfter">light After</string>
    <string name="notTimeToShower">Not time to Shower</string>



    <!--set up netpie -->
    <string name="appId">Application ID</string>
    <string name="appKey">Key</string>
    <string name="appSecret">Secret</string>
    <string name="submit">Submit</string>
    <string name="setupNETPIE">Setup to NETPIE</string>
    <string name="warningExitSetupNetPie">The settings key not completed</string>


    <!--image fragment -->
    <string name="image">Image</string>
    <string name="lastUpdate">Last Update</string>
    <string name="sendImage">Send Image</string>
    <string name="sendImageValue1">Every 1 Hour</string>
    <string name="sendImageValue2">Every 2 Hour</string>
    <string name="sendImageValue3">Every 3 Hour</string>
    <string name="sendImageValue4">Every 6 Hour</string>
    <string name="sendImageValue5">Every 12 Hour</string>

    <!--moisture fragment -->
    <string name="moisture">Moisture</string>
    <string name="water">Water</string>
    <string name="autoWater">Auto Water</string>
    <string name="moistureStandard">Moisture Standard Value</string>
    <string name="unitMoisture"> %</string>

    <!--temp fragment -->
    <string name="temp">Temp</string>
    <string name="shower">Shower</string>
    <string name="autoShower">Auto Shower</string>
    <string name="tempStandard">Temp Standard Value</string>
    <string name="unitTemp"> °C</string>

    <!--light fragment -->
    <string name="light">Light</string>
    <string name="slatOpen">Slat Opened</string>
    <string name="slatClose">Slat Closed</string>
    <string name="slatHalfClose">Slat Half Closed</string>
    <string name="unitLight"> Lux</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="autoSlat">Auto Slat</string>


    <!--log fragment -->
    <string name="log">Log</string>
    <string name="acCloseSlat">Close Slat</string>
    <string name="acOpenSlat">Open Slat</string>
    <string name="typeActionAuto">Auto</string>
    <string name="typeActionManual">Manual</string>
    <string name="lightIn">Light In</string>
    <string name="lightOut">Light Out</string>

    <!--setting activity-->
    <string name="transmissions">Transmissions</string>
    <string name="senDataSensor">Send Sensor Data</string>
    <string name="data">Data</string>
    <string name="insertData">Insert Data Sensor</string>
    <string name="TimeDataStorage">Time Data storage</string>
    <string name="every">Every</string>
    <string name="minute">minute</string>
    <string name="hour">Hour</string>
    <string name="day">Days</string>
    <string name="editAppId">Edit App ID</string>
    <string name="textHintAppId">Enter you app ID</string>
    <string name="editAppKey">Edit App Key</string>
    <string name="textHintAppKey">Enter you app Key</string>
    <string name="editAppSecret">Edit App Secret</string>
    <string name="textHintAppSecret">Enter you app secret</string>
    <string name="frequencySendData">Frequency of send data</string>
    <string name="frequencySendImage">Frequency of send image</string>
    <string name="frequencyInsertData">Frequency of insert data</string>
    <string name="dayStorageData">Day storage data</string>

    <string-array name="ftPubRDArray">
        <item>Every 1 minute</item>
        <item>Every 5 minute</item>
        <item>Every 10 minute</item>
        <item>Every 20 minute</item>
        <item>Every 30 minute</item>
        <item>Every 60 minute</item>
    </string-array>
    <string-array name="ftPubIM_IRDArray">
        <item>Every 1 hour</item>
        <item>Every 2 hour</item>
        <item>Every 3 hour</item>
        <item>Every 6 hour</item>
        <item>Every 12 hour</item>
        <item>Every 24 hour</item>
    </string-array>
    <string-array name="dayOfStorageArray">
        <item>1 day</item>
        <item>2 day</item>
        <item>3 day</item>
        <item>4 day</item>
        <item>5 day</item>
        <item>6 day</item>
        <item>7 day</item>
    </string-array>
    
    <string-array name="titleTable">
        <item>Time</item>
        <item>Working</item>
        <item>Type</item>
        <item>Before</item>
        <item>After</item>
        <item>note</item>
    </string-array>


    <!--listener-->
    <string name="notSetupNETPIE">Not setup NETPIE</string>
    <string name="noInternet">No Internet connection</string>
    <string name="notConnectedNETPIE">Can not connect to NETPIE</string>
    <string name="connectionLost">Connection Lost</string>
    <string name="connectedNETPIE">Connected to NETPIE</string>

    <!--notification-->
    <string name="piNotResponse">Raspberry Pi Not Response</string>

    <!--setting activity-->
    <string name="logMoisture">Moisture History</string>
    <string name="logTemp">Temp History</string>
    <string name="logLight">Light Intensity History</string>

    




</resources>

