<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottomBarImage"
        android:icon="@mipmap/ic_bottom_bar_image"
        android:title="@string/image" />
    <item
        android:id="@+id/bottomBarMoisture"
        android:icon="@mipmap/ic_bottom_bar_moisture"
        android:title="@string/moisture" />
    <item
        android:id="@+id/bottomBarTemp"
        android:icon="@mipmap/ic_bottom_bar_temperature"
        android:title="@string/temp" />
    <item
        android:id="@+id/bottomBarLight"
        android:icon="@mipmap/ic_bottom_bar_sunlight"
        android:title="@string/light" />
    <item
        android:id="@+id/bottomBarLog"
        android:icon="@mipmap/ic_bottom_bar_log"
        android:title="@string/log" />
</menu>