<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.SetupNETPIEActivity"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutLogoNETPIE"
        android:layout_above="@+id/linearLayoutFillSetupNetPie">
        <ImageView
            android:layout_width="@dimen/image_width_setup_netpie"
            android:layout_height="@dimen/image_height_setup_netpie"
            android:gravity="center"
            android:id="@+id/logoNETPIE"
            android:src="@drawable/bg_netpie_logo"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoNETPIE"
            android:text="@string/setupNETPIE"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_size_logoNETPIE"
            android:textColor="@color/white"/>
        
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_setup_netpie"
        android:id="@+id/linearLayoutFillSetupNetPie"
        android:layout_marginLeft="@dimen/margin_left_layout_setup_netpie"
        android:layout_marginRight="@dimen/margin_right_layout_setup_netpie"
        android:padding="@dimen/padding_layout_setup_netpie"
        android:layout_centerInParent="true">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInputLayoutAppID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextAppID"
                android:hint="@string/appId"
                android:inputType="textAutoComplete"
                android:textSize="@dimen/text_size"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInputLayoutAppKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextAppKey"
                android:inputType="textAutoComplete"
                android:hint="@string/appKey"
                android:textSize="@dimen/text_size"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInputLayoutAppSecret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextAppSecret"
                android:inputType="textAutoComplete"
                android:hint="@string/appSecret"
                android:textSize="@dimen/text_size"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancelSetNETPIE"
        android:text="@string/cancel"
        android:layout_below="@+id/linearLayoutFillSetupNetPie"
        android:layout_alignLeft="@+id/linearLayoutFillSetupNetPie"
        android:layout_margin="@dimen/margin_btn_setup_ntpie"
        android:padding="@dimen/padding_btn_setup_nrtpie"
        android:textSize="@dimen/text_size_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/white"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubmitSetNETPIE"
        android:text="@string/submit"
        android:layout_below="@+id/linearLayoutFillSetupNetPie"
        android:layout_alignRight="@+id/linearLayoutFillSetupNetPie"
        android:layout_margin="@dimen/margin_btn_setup_ntpie"
        android:padding="@dimen/padding_btn_setup_nrtpie"
        android:textSize="@dimen/text_size_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/white"/>

</RelativeLayout>
