<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sitthiphong.smartgardencare.activity.SettingActivity">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rootLayoutSetting">
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nestedScrollViewSetting"
            android:layout_below="@+id/appBarLayoutSetting"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_setting_NETPIE"
                    android:layout_marginLeft="@dimen/margin_left_right_layout_setting"
                    android:layout_marginRight="@dimen/margin_left_right_layout_setting"
                    android:elevation="4dp"
                    android:background="@drawable/background_with_shadow">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/titleLayout_setting_NETPIE"
                        android:text="@string/setupNETPIE"
                        android:textSize="@dimen/text_size"
                        android:padding="16dp"
                        android:textColor="@color/colorAccent"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/layoutSetAppId"
                        android:layout_below="@+id/titleLayout_setting_NETPIE"
                        android:background="?android:attr/selectableItemBackground"
                        android:elevation="8dp"
                        android:paddingLeft="@dimen/padding_layout_setting"
                        android:paddingRight="@dimen/padding_layout_setting"
                        android:paddingTop="@dimen/padding_layout_setting"
                        android:clickable="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/titleAppId"
                            android:text="@string/appId"
                            android:textSize="@dimen/title_textView_size"
                            android:gravity="center"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/appIdValue"
                            android:layout_below="@+id/titleAppId"
                            android:text="Smart Garden"
                            android:textSize="@dimen/text_size"
                            android:layout_marginTop="@dimen/margin_top_value_setting"
                            android:layout_marginBottom="16dp"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:id="@+id/line1"
                            android:background="#4D000000"
                            android:layout_marginTop="16dp"
                            android:layout_alignParentBottom="true"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/layoutSetAppKey"
                        android:layout_below="@+id/layoutSetAppId"
                        android:background="?android:attr/selectableItemBackground"
                        android:paddingLeft="@dimen/padding_layout_setting"
                        android:paddingRight="@dimen/padding_layout_setting"
                        android:paddingTop="@dimen/padding_layout_setting"
                        android:clickable="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/titleAppKey"
                            android:text="@string/appKey"
                            android:textSize="@dimen/title_textView_size"
                            android:gravity="center"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/appKeyValue"
                            android:layout_below="@+id/titleAppKey"
                            android:text="95wthHgveh"
                            android:textSize="@dimen/text_size"
                            android:layout_marginTop="@dimen/margin_top_value_setting"
                            android:layout_marginBottom="16dp"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:id="@+id/line2"
                            android:background="#4D000000"
                            android:layout_marginTop="16dp"
                            android:layout_alignParentBottom="true"/>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/layoutSetAppSecret"
                        android:layout_below="@+id/layoutSetAppKey"
                        android:background="?android:attr/selectableItemBackground"
                        android:paddingLeft="@dimen/padding_layout_setting"
                        android:paddingRight="@dimen/padding_layout_setting"
                        android:paddingTop="@dimen/padding_layout_setting"
                        android:clickable="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/titleAppSecret"
                            android:text="@string/appSecret"
                            android:textSize="@dimen/title_textView_size"
                            android:gravity="center"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/appSecretValue"
                            android:layout_below="@+id/titleAppSecret"
                            android:text="HGDvherigjsdfl4k3o"
                            android:textSize="@dimen/text_size"
                            android:layout_marginTop="@dimen/margin_top_value_setting"
                            android:layout_marginBottom="16dp"/>

                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_setting_transmissions"
                    android:layout_marginLeft="@dimen/margin_left_right_layout_setting"
                    android:layout_marginRight="@dimen/margin_left_right_layout_setting"
                    android:elevation="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_below="@+id/layout_setting_NETPIE"
                    android:background="@drawable/background_with_shadow">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/titleLayout_setting_transmissions"
                        android:text="@string/transmissions"
                        android:textSize="@dimen/text_size"
                        android:padding="16dp"
                        android:textColor="@color/colorAccent"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/layoutSetSendData"
                        android:layout_below="@+id/titleLayout_setting_transmissions"
                        android:background="?android:attr/selectableItemBackground"
                        android:paddingLeft="@dimen/padding_layout_setting"
                        android:paddingRight="@dimen/padding_layout_setting"
                        android:paddingTop="@dimen/padding_layout_setting"
                        android:clickable="true"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp"
                            android:id="@+id/titleSendData"
                            android:text="@string/senDataSensor"
                            android:textSize="@dimen/title_textView_size"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/sendDataValue"
                            android:layout_below="@+id/titleSendData"
                            android:textSize="@dimen/text_size"
                            android:layout_marginTop="@dimen/margin_top_value_setting"
                            android:layout_marginBottom="16dp"/>

                    </RelativeLayout>

                </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_setting_data_collection"
                android:layout_marginLeft="@dimen/margin_left_right_layout_setting"
                android:layout_marginRight="@dimen/margin_left_right_layout_setting"
                android:elevation="4dp"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/layout_setting_transmissions"
                android:background="@drawable/background_with_shadow">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleLayout_setting_data_collection"
                    android:text="@string/data"
                    android:textSize="@dimen/text_size"
                    android:padding="16dp"
                    android:textColor="@color/colorAccent"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutSetInsertData"
                    android:layout_below="@+id/titleLayout_setting_data_collection"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="@dimen/padding_layout_setting"
                    android:paddingRight="@dimen/padding_layout_setting"
                    android:paddingTop="@dimen/padding_layout_setting"
                    android:clickable="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:id="@+id/titleInsertData"
                        android:text="@string/insertData"
                        android:textSize="@dimen/title_textView_size"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/insertDataValue"
                        android:layout_below="@+id/titleInsertData"
                        android:text="ถถถถถ"
                        android:textSize="@dimen/text_size"
                        android:layout_marginTop="@dimen/margin_top_value_setting"
                        android:layout_marginBottom="16dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:id="@+id/line1_data"
                        android:background="#4D000000"
                        android:layout_marginTop="16dp"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutSetStorageData"
                    android:layout_below="@+id/layoutSetInsertData"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="@dimen/padding_layout_setting"
                    android:paddingRight="@dimen/padding_layout_setting"
                    android:paddingTop="@dimen/padding_layout_setting"
                    android:clickable="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:id="@+id/titleStorageData"
                        android:text="@string/TimeDataStorage"
                        android:textSize="@dimen/title_textView_size"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/storageDataValue"
                        android:layout_below="@+id/titleStorageData"
                        android:textSize="@dimen/text_size"
                        android:layout_marginTop="@dimen/margin_top_value_setting"
                        android:layout_marginBottom="16dp"/>

                </RelativeLayout>
                </RelativeLayout>

            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
