<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sitthiphong.smartgardencare.activity.ImageFragment">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imGarden"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutControlImageGarden"
        android:layout_below="@+id/imGarden"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_layout_control_im_garden"
        android:paddingRight="@dimen/padding_layout_control_im_garden"
        android:layout_marginTop="@dimen/margin_layout_control_im_garden"
        android:layout_marginBottom="@dimen/margin_layout_control_im_garden">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:layout_width="@dimen/btn_im_garden_size"
                android:layout_height="@dimen/btn_im_garden_size"
                android:id="@+id/btRefreshImageGarden"
                android:background="@drawable/selector_refresh_button"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:layout_width="@dimen/btn_im_garden_size"
                android:layout_height="@dimen/btn_im_garden_size"
                android:id="@+id/btLoadImageGarden"
                android:background="@drawable/selector_load_button"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:layout_width="@dimen/btn_im_garden_size"
                android:layout_height="@dimen/btn_im_garden_size"
                android:id="@+id/btShareImageGarden"
                android:background="@drawable/selector_share_button"/>

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#4D000000"
        android:layout_below="@+id/layoutControlImageGarden"
        android:layout_marginLeft="@dimen/margin_line"
        android:layout_marginRight="@dimen/margin_line"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_time_im_garden"
        android:text="@string/lastUpdate"
        android:textSize="@dimen/text_size"
        android:layout_below="@+id/layoutControlImageGarden"
        android:paddingLeft="@dimen/padding_left_details"
        android:paddingRight="@dimen/padding_right_details"
        android:layout_marginTop="@dimen/margin_top_details"
        android:layout_marginBottom="@dimen/margin_bottom_details"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time_im_garden"
        android:text="12:12 12/07/2016"
        android:textSize="@dimen/text_size"
        android:layout_below="@id/layoutControlImageGarden"
        android:layout_toRightOf="@+id/title_time_im_garden"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:paddingRight="@dimen/padding_right_details"
        android:layout_marginTop="@dimen/margin_top_details"
        android:layout_marginBottom="@dimen/margin_bottom_details"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#4D000000"
        android:layout_below="@+id/title_time_im_garden"
        android:layout_marginLeft="@dimen/margin_line"
        android:layout_marginRight="@dimen/margin_line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_setting_im_garden"
        android:layout_below="@+id/title_time_im_garden"
        android:padding="@dimen/padding_layout_setting_im_garden">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_setting_im_garden"
            android:text="@string/sendImage"
            android:textSize="@dimen/text_size"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_setting_send_im_garden"
            android:src="@mipmap/ic_mode_edit_black_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/padding_right_details"
            android:paddingLeft="@dimen/padding_left_details"
            android:paddingRight="@dimen/padding_right_details"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_value_im_garden"
            android:layout_toLeftOf="@+id/btn_setting_send_im_garden"
            android:layout_toRightOf="@+id/title_setting_im_garden"
            android:gravity="right"
            android:textSize="@dimen/text_size"
            android:paddingRight="@dimen/padding_value_setting_im_garden"
            android:text="@string/sendImageValue1"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#4D000000"
        android:layout_below="@+id/layout_setting_im_garden"
        android:layout_marginLeft="@dimen/margin_line"
        android:layout_marginRight="@dimen/margin_line"/>
</RelativeLayout>
